# inventory_manager

./: .gitignore  README.md  pyproject.toml  test_api.py
config/: configs_example.yml
src/eccentric_easel/: ai_utils.py  get_locations.py  image_utils.py  main.py  make_price_tag.py  square_utils.py  utils.py
